objects/ddt_dynamic_001__Testing_Data__c.object
<CustomObject>
    <fields>
        <fullName>ddt_dynamic_001__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ddt_dynamic_001__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ddt_dynamic_001__Testing_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Testing Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ddt_dynamic_001__Testing_Report__c</fullName>
        <label>Testing Report</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ddt_dynamic_001__Testing_name__c</fullName>
        <label>Testing name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ddt_dynamic_001__mobile__c</fullName>
        <label>mobile</label>
        <type>Phone</type>
    </fields>
    <label>Testing Data</label>
    <listViews>
        <fullName>ddt_dynamic_001__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Testing Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Testing Datas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>